# nanodeepseek

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  summary.json  train.ps1  train_dpo_all.jsonl  train_dpo_eb_1000.jsonl  train_dpo_exams.jsonl  train_dpo_tool_use_1000.jsonl  train_sft_all.jsonl  train_sft_eb_1000.jsonl  train_sft_exams.jsonl  train_sft_laws.jsonl  train_sft_tool_use_1000.jsonl
cpp/: CMakeLists.txt
cpp/src/: main.cpp  matmul.cpp  tensor.hpp
data/instruction/: README.md  country_rules.json  gold.jsonl  question_templates.json
data/processed/1_fachtexte_regelwerke/: AO.md  AT_RIS_EStG1988.md  AT_RIS_UGB.md  CH_ESTV_MWSTG.md  CH_FEDLEX_OR_ELI.md
data/processed/5_pruefungen/: 1-ssc_bp_musterprüfung_finanz-und-rechnungswesen-mit-lösungsansatz.md  COO_2071_200_17_219490__VBK_Fruehjahr_2019_Loesung_Stand_2019_05_08.md  COO_2071_200_17_9869354__BUHA 1 und 2, Lösung, April 2022.md  COO_2071_200_23_1320883__BUHA 1 und 2, Lösung, April 2023.md  COO_2071_200_23_1320935__2_Loesung_BH_I_05_2024 (1).md  aufg.md  fragenkatalog-lap-steuerassistenz-mai-2021-.md
docs/: AT_RIS_BAO.md  AT_RIS_UStG1994.md  DE_BMF_GoBD_Aenderung_2024-03-11.md  EStG.md  data_generation.md  epics_instruction_data.md  epics_synthetic_training_data.md  instruction_data_generation.md  prd_instruction_data.md  prd_synthetic_training_data.md  schemas_synthetic_training_data.md  tool_use_training_data.md
python/: generate.py  pyproject.toml  train.py
python/nanodeepseek/: __init__.py
python/nanodeepseek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/nanodeepseek/data/: __init__.py  tokenizer.py
python/nanodeepseek/model/: __init__.py  block.py  mla.py  model.py  rmsnorm.py  rope.py  swiglu.py
src/: main.cpp  matmul.hpp  tensor.cpp
tools/: README_instruction_data.md  README_synthetic_data.md  case_library_eb_100.json  case_library_tool_use_100.json  dataprep.py  download_dach_accounting_resoures.py  download_general_pretrain_corpus.py  eb_generation_config.json  eb_generator.py  exams_ingest.py  expand_country_variants.py  generate_eb_dataset.py  generate_instruction_data.py  generate_tool_use_dataset.py  io_utils.py  laws_qa_generator.py  mix_config.json  mix_datasets.py  paraphrase.py  paraphrase_instruction_data.py  recovered_wiki_to_jsonl.py  schemas.py  split_dataset.py  split_instruction_data.py  tool_definitions.json  tool_use_generator.py  validate_dataset.py  validate_instruction_data.py  validator.py  wikitext_to_plaintext.py
