[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanodeepseek"
version = "0.1.0"
description = "A simplified implementation of DeepSeek model with Multi-Head Latent Attention"
authors = [
    {name = "NanoDeepSeek Team", email = "team@nanodeepseek.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["deep learning", "transformer", "language model", "pytorch", "attention"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core ML framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    
    # Scientific computing
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Data handling
    "pandas>=1.3.0",
    "datasets>=2.0.0",
    "transformers>=4.20.0",
    
    # Tokenization
    "tokenizers>=0.13.0",
    "sentencepiece>=0.1.95",
    
    # Configuration and logging
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    
    # Progress bars and utilities
    "tqdm>=4.64.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    
    # Mathematical operations
    "einops>=0.6.0",
    
    # File handling
    "pathlib2>=2.3.6; python_version<'3.4'",
    "json5>=0.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    
    # Documentation
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    
    # Profiling and debugging
    "line_profiler>=4.0.0",
    "memory_profiler>=0.60.0",
    "py-spy>=0.3.0",
]

training = [
    # Advanced training utilities
    "accelerate>=0.20.0",
    "deepspeed>=0.9.0",
    "fairscale>=0.4.0",
    
    # Optimization
    "lion-pytorch>=0.1.0",
    "timm>=0.9.0",
    
    # Data processing
    "datasets[streaming]>=2.0.0",
    "huggingface_hub>=0.15.0",
    
    # Monitoring
    "wandb>=0.15.0",
    "mlflow>=2.0.0",
    "tensorboard>=2.13.0",
]

inference = [
    # Fast inference
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "triton>=2.0.0",
    
    # Model optimization
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.3.0",
    
    # Serving
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

jupyter = [
    # Jupyter environment
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

all = ["nanodeepseek[dev,training,inference,jupyter]"]

[project.scripts]
nanodeepseek-train = "train:main"
nanodeepseek-generate = "generate:main"

[project.urls]
Homepage = "https://github.com/nanodeepseek/nanodeepseek"
Documentation = "https://nanodeepseek.readthedocs.io"
Repository = "https://github.com/nanodeepseek/nanodeepseek"
"Bug Tracker" = "https://github.com/nanodeepseek/nanodeepseek/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

# MyPy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "datasets.*",
    "tokenizers.*",
    "wandb.*",
    "tensorboard.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
